package personal.iterator;

public interface Iterable<T> {
	Iterator<T> getIterator();
}