package sample.iterator;

public interface Iterator<T> {
	boolean hasNext();

	T next();
}